# cortex25519

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
qemu-tests/: Cargo.toml  README.md  qemu.gdb  test.sh
qemu-tests/.cargo/: config.toml
qemu-tests/wycheproof/: Cargo.toml
qemu-tests/wycheproof-gen/: Cargo.toml
qemu-tests/wycheproof-gen/src/: lib.rs  tests.rs
qemu-tests/wycheproof/src/: lib.rs
src/: backend.rs  cortex_m_curve25519.s  cortex_m_ed25519.s  cortex_m_fe25519.s  ed25519.rs  lib.rs  x25519.rs
