[package]
name = "qemu-tests"
version = "0.0.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
description = "Test salty using QEMU musca-b1"
license = "Apache-2.0 OR MIT"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = { version = "0.7.3" }
cortex-m-semihosting = "0.3.5"
hex-literal = "0.2.1"
panic-semihosting = { version = "0.5.3", features = ["exit"] }
cortex25519 = { path = ".." }
wycheproof = { version = "0.1", path = "wycheproof" }
wycheproof-gen = { version = "0.1", path = "wycheproof-gen" }

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
